Pre-version portfolio web
Added a few effects and styles

--- a/index.html
+++ b/index.html
@@ -45,32 +45,17 @@
     </main>
     <section id="about" class="page-section">
       <div class="container">
-        <h1>
-          <span class="span-title">&lt;h1&gt;</span>about me<span
-            class="span-title"
-            >&lt;/h1&gt;</span
-          >
-        </h1>
+        <h1 class="title">&lt;h1&gt;about me&lt;/h1&gt;</h1>
       </div>
     </section>
     <section id="projects" class="page-section">
       <div class="container">
-        <h1>
-          <spa class="span-title" n>&lt;h1&gt;</spa>my projects<span
-            class="span-title"
-            >&lt;/h1&gt;</span
-          >
-        </h1>
+        <h1 class="title">&lt;h1&gt;my projects&lt;/h1&gt;</h1>
       </div>
     </section>
     <section id="contact" class="page-section">
       <div class="container">
-        <h1>
-          <span class="span-title">&lt;h1&gt;</span>contact me<span
-            class="span-title"
-            >&lt;/h1&gt;</span
-          >
-        </h1>
+        <h1 class="title">&lt;h1&gt;contact me&lt;/h1&gt;</h1>
       </div>
     </section>
 
